--- a/humanities.html
+++ b/humanities.html
@@ -104,55 +104,7 @@
 <div class="container">
 <div class="row d-flex no-gutters">
 <div class="col-md-5 d-flex"> -->
-<!-- <div class="img img-video d-flex align-self-stretch align-items-center justify-content-center justify-content-md-center mb-4 mb-sm-0" style="background-image:url(images/about-1.jpg);">
-</div>
-</div>
-<div class="col-md-7 pl-md-5 py-md-5">
-<div class="heading-section pt-md-5">
-<h2 class="mb-4">Why Choose Us?</h2> -->
-<!-- </div> -->
- <!-- 
-<div class="row" style="padding-top: 50px;">
-<div class="col-md-6 services-2 w-100 d-flex">
-<div class="icon d-flex align-items-center justify-content-center">
-    <span class="fal fa-users"></span>
- -->
-<!-- </div> -->
-<!-- <div class="text pl-3">
-<h4>Great Faculty</h4>
-<p>Improve your career prospects with our master's programme and study at our newly.</p>
-</div>
-</div>
-<div class="col-md-6 services-2 w-100 d-flex">
-<div class="icon d-flex align-items-center justify-content-center">
-    <span class="fal fa-building"></span>
 
-</div>
-<div class="text pl-3">
-<h4>New Infrastructure</h4>
-<p>Improve your career prospects with our master's programme and study at our newly.</p>
-</div>
-</div>
-<div class="col-md-6 services-2 w-100 d-flex">
-<div class="icon d-flex align-items-center justify-content-center"><span class="icon color3"></span></div>
-<div class="text pl-3">
-<h4>More Learning</h4>
-<p>Improve your career prospects with our master's programme and study at our newly.</p>
-</div>
-</div>
-<div class="col-md-6 services-2 w-100 d-flex">
-<div class="icon d-flex align-items-center justify-content-center"><span class="fal fa-magic"></span></div>
-<div class="text pl-3">
-<h4>Enhanced Syllabi</h4>
-<p>Improve your career prospects with our master's programme and study at our newly.</p>
-</div>
-</div>
-</div>
- -->
-<!-- </div>
-</div>
-</div>
-</section> -->
 <section class="ftco-section bg-light">
 <div class="container">
   <!-- <div class="container"> -->
@@ -196,7 +148,7 @@ Humanities & Social Sciences</span>
 <p style="text-align: center;">Humanities</p>
 <p style="text-align: center;">Date & Time: 21 sept., 9:00 AM</p>
 <br>
-<p>The School of Humanities and Social Sciences includes a wide range of disciplines Economics, Psychology, Management, Commerce and English. The school offers doctoral programs in these disciplines. The school runs Masters Program in Psychology. The faculty of school is offering courses in Humanities and Social Sciences to undergraduate and post graduate students of the Institute. These courses are aimed at developing students to become effective business managers in their careers besides inculcating in them an understanding of values, culture and heritage. The School has MOU with the University of Groningen, The Netherlands for Clinical Psychology Program.
+<p style="text-align: justify;">The School of Humanities and Social Sciences includes a wide range of disciplines Economics, Psychology, Management, Commerce and English. The school offers doctoral programs in these disciplines. The school runs Masters Program in Psychology. The faculty of school is offering courses in Humanities and Social Sciences to undergraduate and post graduate students of the Institute. These courses are aimed at developing students to become effective business managers in their careers besides inculcating in them an understanding of values, culture and heritage. The School has MOU with the University of Groningen, The Netherlands for Clinical Psychology Program.
 </p><!-- <p>
 Come join us in building the new India!
   
