--- a/lmtsm.html
+++ b/lmtsm.html
@@ -195,10 +195,10 @@
 <p style="text-align: center;">LMTSM</p>
 <p style="text-align: center;">Date & Time: 21 sept., 9:00 AM</p>
 <br>
-<p>LM Thapar School of Management (LMTSM) was established on July 23, 2007 in the erstwhile princely state of Patiala (Punjab, India),under the flagship of Thapar Institute of Engineering and Technology (Deemed-to be-University), a 61 year old academic institution. Incepted in the fond memory of Late Shri. Lalit Mohan Thapar(October 27, 1930 - January 17, 2007), founder of the Thapar Group of companies, LMTSM is a business education pioneer in Northern India, transform graduates into professionals with a unique platform of global exposure with experiential learning . The school of management is led by Dr. Padmakumar Nair, Director-LMTSM, who is enriched with an experience of more than 32 years and formerly worked as Clinical Professor and Academic Director at The Leadership Center, SOM, University of Texas,Dallas. LMTSM was shifted in 2013 to its present state of the art campus in Dera Bassi, Punjab,India.</p>
+<p style="text-align: justify;">LM Thapar School of Management (LMTSM) was established on July 23, 2007 in the erstwhile princely state of Patiala (Punjab, India),under the flagship of Thapar Institute of Engineering and Technology (Deemed-to be-University), a 61 year old academic institution. Incepted in the fond memory of Late Shri. Lalit Mohan Thapar(October 27, 1930 - January 17, 2007), founder of the Thapar Group of companies, LMTSM is a business education pioneer in Northern India, transform graduates into professionals with a unique platform of global exposure with experiential learning . The school of management is led by Dr. Padmakumar Nair, Director-LMTSM, who is enriched with an experience of more than 32 years and formerly worked as Clinical Professor and Academic Director at The Leadership Center, SOM, University of Texas,Dallas. LMTSM was shifted in 2013 to its present state of the art campus in Dera Bassi, Punjab,India.</p>
 <p>
 The institute is organized into 9 academic units with 6 centers of excellence. In addition to the core courses and doctoral programs, there are various open electives which are offered to students cater to the dynamic business trends.
-</p><p>
+</p><p style="text-align: justify;">
 The tech-savvy campus is set on a sprawling area of 33 acres. With students from all across India, LMTSM has a residential facility for over 500 students. The graduates run over 30 clubs reinforcing their academic, sports and cultural pursuits.
 </p>
 
