--- a/civil.html
+++ b/civil.html
@@ -99,60 +99,6 @@
 
 
  -->
-
-<!-- <section class="ftco-section ftco-no-pt ftco-no-pb">
-<div class="container">
-<div class="row d-flex no-gutters">
-<div class="col-md-5 d-flex"> -->
-<!-- <div class="img img-video d-flex align-self-stretch align-items-center justify-content-center justify-content-md-center mb-4 mb-sm-0" style="background-image:url(images/about-1.jpg);">
-</div>
-</div>
-<div class="col-md-7 pl-md-5 py-md-5">
-<div class="heading-section pt-md-5">
-<h2 class="mb-4">Why Choose Us?</h2> -->
-<!-- </div> -->
- <!-- 
-<div class="row" style="padding-top: 50px;">
-<div class="col-md-6 services-2 w-100 d-flex">
-<div class="icon d-flex align-items-center justify-content-center">
-  <span class="fal fa-users"></span>
- -->
-<!-- </div> -->
-<!-- <div class="text pl-3">
-<h4>Great Faculty</h4>
-<p>Improve your career prospects with our master's programme and study at our newly.</p>
-</div>
-</div>
-<div class="col-md-6 services-2 w-100 d-flex">
-<div class="icon d-flex align-items-center justify-content-center">
-  <span class="fal fa-building"></span>
-
-</div>
-<div class="text pl-3">
-<h4>New Infrastructure</h4>
-<p>Improve your career prospects with our master's programme and study at our newly.</p>
-</div>
-</div>
-<div class="col-md-6 services-2 w-100 d-flex">
-<div class="icon d-flex align-items-center justify-content-center"><span class="icon color3"></span></div>
-<div class="text pl-3">
-<h4>More Learning</h4>
-<p>Improve your career prospects with our master's programme and study at our newly.</p>
-</div>
-</div>
-<div class="col-md-6 services-2 w-100 d-flex">
-<div class="icon d-flex align-items-center justify-content-center"><span class="fal fa-magic"></span></div>
-<div class="text pl-3">
-<h4>Enhanced Syllabi</h4>
-<p>Improve your career prospects with our master's programme and study at our newly.</p>
-</div>
-</div>
-</div>
- -->
-<!-- </div>
-</div>
-</div>
-</section> -->
 <section class="ftco-section bg-light">
 <div class="container">
   <!-- <div class="container"> -->
@@ -182,7 +128,7 @@
 <p style="text-align: center;">CED</p>
 <p style="text-align: center;">Date & Time: 21 sept., 9:00 AM</p>
 <br>
-<p>We prepare our students to conceptualize, plan, design, construct and implement facilities meant for catering societal needs for today and tomorrow, and that is how students understand what civil engineering is all about.In BE Civil Engineering, Department offers three focus areas namely: Structural Engineering and Sustainable Materials, Smart cities, Infrastructure Development and Management. Our undergraduate curriculum is a perfect balance between theoretical requirements and practical aspects of not just the broad disciplines of civil engineering such as structure, surveying, geotechnical, transportation, and water resources engineering but also provides the management and entrepreneurial scope in its coverage. Our faculty has fundamental competencies to teach in all the above fields along with the support of our dedicated staff members.
+<p style="text-align: justify;">We prepare our students to conceptualize, plan, design, construct and implement facilities meant for catering societal needs for today and tomorrow, and that is how students understand what civil engineering is all about.In BE Civil Engineering, Department offers three focus areas namely: Structural Engineering and Sustainable Materials, Smart cities, Infrastructure Development and Management. Our undergraduate curriculum is a perfect balance between theoretical requirements and practical aspects of not just the broad disciplines of civil engineering such as structure, surveying, geotechnical, transportation, and water resources engineering but also provides the management and entrepreneurial scope in its coverage. Our faculty has fundamental competencies to teach in all the above fields along with the support of our dedicated staff members.
 
 </p>
 
