--- a/alumni.html
+++ b/alumni.html
@@ -66,7 +66,7 @@
 <div class="faded">
 <p>Vice president, marketing, Reltio. <br> Worked in organizations like Samtel, Honda Motors in India and Amdocs, Oracle, Veeva Systems in the US</p>
 <p>Alumunus Santa Clara University</p>
-<p style="font-weight: bold;">DATE:   </p>
+<p style="font-weight: bold;">DATE: 21 Sept,2020   </p>
 <p style="font-weight: bold;">TIME: <span style="color:#640000">12:00-1:00 PM</span></p>
 <br>
 <a href="#"   target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
@@ -91,7 +91,7 @@
 <div class="faded">
 <p>Managing Director, Crystal Sanitary Fittings Pvt.Ltd.(ARK)</p>
 <br><br><br><br><br><br>
-<p style="font-weight: bold;">DATE:   </p>
+<p style="font-weight: bold;">DATE: 21 Sept,2020   </p>
 <p style="font-weight: bold;">TIME:<span style="color:#640000"> 10:00-11:00 AM ; 3:00-4:00 PM </span> </p>
 <a href="#"   target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
 
@@ -120,7 +120,7 @@
   <p>Alumnus IIT Delhi & BITS Pilani</p>
   <br>
   
-  <p style="font-weight: bold;">DATE:   </p>
+  <p style="font-weight: bold;">DATE: 21 Sept,2020   </p>
 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 10:00-11:00 AM; 1:00-2:00 PM </span>  </p>
 <a href="#"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
 <ul class="ftco-social text-center">
@@ -145,7 +145,7 @@
 <p>Executive Engineer, DWSS, Punjab. Site Engineer, Siel Chemical Complex</p>
 <p>ME Structures from PEC Chandigarh</p>
 <br><br><br>
-<p style="font-weight: bold;">DATE:   </p>
+<p style="font-weight: bold;">DATE: 21 Sept,2020   </p>
 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 11:00-12:00 PM; 3:00-4:00 PM </span>  </p>
 <a href="#"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
 <ul class="ftco-social text-center">
@@ -171,7 +171,7 @@
   Current designation: Self-employed
   Past designations and organizations: MT at EIL, AM at Punwire, TL at NIIT Ltd</p>
   <br>
-  <p style="font-weight: bold;">DATE:   </p>
+  <p style="font-weight: bold;">DATE: 21 Sept,2020   </p>
 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 11:00-12:00 PM ; 2:00-3:00 PM  </span> </p>
 <a href="#"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
 <ul class="ftco-social text-center">
@@ -200,7 +200,7 @@ Chief Technology Officer, Tata Communications Lanka Ltd
 </p>
 <p>Alumnus IIM Kozhikode</p>
 
-<p style="font-weight: bold;">DATE:   </p>
+<p style="font-weight: bold;">DATE: 21 Sept,2020   </p>
 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 11:00-12:00 PM; 2:00-3:00 PM </span>  </p>
 <a href="#"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
 <ul class="ftco-social text-center">
@@ -226,7 +226,7 @@ Chief Technology Officer, Tata Communications Lanka Ltd
   Past designations and organizations : Delphi, Honeywell and IBM</p>
   <p>Alumnus eCornell University</p>
 
-  <p style="font-weight: bold;">DATE:   </p>
+  <p style="font-weight: bold;">DATE: 21 Sept,2020   </p>
 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 11:00-12:00 PM; 4:00-5:00 PM </span> </p>
 <a href="#"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
 <ul class="ftco-social text-center">
@@ -252,7 +252,7 @@ Chief Technology Officer, Tata Communications Lanka Ltd
 Workday
 Salesforce , Cisco, Sun Microsystems, Silicon Graphics , CMC Ltd</p>
 <br>
-<p style="font-weight: bold;">DATE:   </p>
+<p style="font-weight: bold;">DATE: 21 Sept,2020   </p>
 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 10:00-11:00 AM; 12:00-1:00 PM;2:00-3:00 PM </span>  </p>
 <a href="#"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
 <ul class="ftco-social text-center">
@@ -279,7 +279,7 @@ Salesforce , Cisco, Sun Microsystems, Silicon Graphics , CMC Ltd</p>
 <p>Alumnus Harvard Business School</p>
 <br><br><br><br><br>
 
-<p style="font-weight: bold;">DATE:   </p>
+<p style="font-weight: bold;">DATE: 21 Sept,2020   </p>
 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 10:00-11:00 AM; 4:00-5:00 PM  </span>  </p>
 <a href="#"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
 
@@ -306,7 +306,7 @@ Salesforce , Cisco, Sun Microsystems, Silicon Graphics , CMC Ltd</p>
 <p>Had worked at CMD (Mazagon Dock Shipbuilders Limited)</p>
 <br><br><br><br><br><br><br><br>
 
-<p style="font-weight: bold;">DATE:   </p>
+<p style="font-weight: bold;">DATE: 21 Sept,2020   </p>
 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 11:00-12:00 PM </span>  </p>
 <a href="#"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
 
@@ -334,7 +334,7 @@ Salesforce , Cisco, Sun Microsystems, Silicon Graphics , CMC Ltd</p>
 <p>Had served 36 Years in Indian Navy </p>
 <br><br><br>
 
-<p style="font-weight: bold;">DATE:   </p>
+<p style="font-weight: bold;">DATE: 21 Sept,2020   </p>
 <p style="font-weight: bold;">TIME: <span style="color:#640000">   </span>  </p>
 <a href="#"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
 
@@ -362,7 +362,7 @@ Salesforce , Cisco, Sun Microsystems, Silicon Graphics , CMC Ltd</p>
 <p>Had been a Fellow, Indian National Academy of engineers and President Robotics Society of India</p>
 <br><br>
 
-<p style="font-weight: bold;">DATE:   </p>
+<p style="font-weight: bold;">DATE: 21 Sept,2020   </p>
 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 10:00-11:00 AM;2:00-3:00 PM  </span>  </p>
 <a href="#"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
 
@@ -389,7 +389,7 @@ Salesforce , Cisco, Sun Microsystems, Silicon Graphics , CMC Ltd</p>
 <p>Sr Executive Director (HR & IT) at Maruti Suzuki India Limited. A total of 39 years of experience <br> Had worked at BHEL</p>
 <br><br><br><br><br><br><br><br><br><br><br><br><br>
 
-<p style="font-weight: bold;">DATE:   </p>
+<p style="font-weight: bold;">DATE: 21 Sept,2020   </p>
 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 11:00-12:00 PM; 4:00-5:00 PM  </span>  </p>
 <a href="#"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
 
@@ -421,7 +421,7 @@ Author of40 books including 26 on Aviation and Space subjects.
 <br> <br>26 years in Indian Air force ,took voluntary retirement after being Chief Engineer of An Operational Bade.</p>
 <p>Alumnus ME (Aero) from IISc, Bangalore</p>
 
-<p style="font-weight: bold;">DATE:   </p>
+<p style="font-weight: bold;">DATE: 21 Sept,2020   </p>
 <p style="font-weight: bold;">TIME: <span style="color:#640000">  1:00-2:00 PM  </span>  </p>
 <a href="#"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
 
@@ -449,7 +449,7 @@ Bank of America, Hong Kong
 Deutsche Bank</p>
 <p>Alumnus IIM Bangalore</p>
 <br><br><br><br><br><br><br><br><br><br><br><br><br>
-<p style="font-weight: bold;">DATE:   </p>
+<p style="font-weight: bold;">DATE: 21 Sept,2020   </p>
 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 10:00-11:00 AM; 1:00-2:00 PM </span>  </p>
 <a href="#"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
 
@@ -475,7 +475,7 @@ Deutsche Bank</p>
 <p>Dy Director Technical,CGEWHO MoHousing and Urban Affairs,Working for past 22 years</p>
 
 <br><br><br><br><br><br><br><br><br><br><br><br><br>
-<p style="font-weight: bold;">DATE:   </p>
+<p style="font-weight: bold;">DATE: 21 Sept,2020   </p>
 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 3:00-4:00 PM </span>  </p>
 <a href="#"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
 
@@ -501,7 +501,7 @@ Deutsche Bank</p>
 <p>Project Controls Manager - NSW/ACT - National Infrastructure Team (John Holland)</p>
 <p>Had worked in Cushman & Wakefield, Laing O’Rourke, Acciona</p>
 <br><br><br>
-<p style="font-weight: bold;">DATE:   </p>
+<p style="font-weight: bold;">DATE: 21 Sept,2020   </p>
 <p style="font-weight: bold;">TIME: <span style="color:#640000"> 3:00-4:00 PM </span>  </p>
 <a href="#"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
 
