--- a/biotech.html
+++ b/biotech.html
@@ -181,13 +181,13 @@
 <span class="excerpt d-block"style="text-align: center;">Bio-Technology Engineering</span>
 <p style="text-align: center;">BTD</p>
 
-<p style="text-align: center;">Date & Time: 21 sept., 9:00 AM</p>
+<p style="text-align: center;">Date & Time: 21 Sept 2020, 9:00 AM</p>
 <br>
 <p style="text-align: justify;">Focus of the Department is primarily to excel both in academics and research in the frontier areas of modern biotechnology and related fields. The focus of these academic programs is to provide excellent environment and state-of-the-art infrastructure for hands on training with industrial training.As a part of the academic contemporization to bring our teaching standards and practices at par with the best in the world, our curriculum has been harmonized with that of Tel Aviv University, Israel. This contemporization process also includes training of the entire faculty of the department on educational technologies, joint research by faculty of two institutions and student exchange. As a result of the extensive teachers training programme, the latest pedagogical approaches such as experiential learning, research-based teaching and project-based learning are being used.
 
 </p>
 
-<a href="https://tiet.zoom.us/my/diptobarman"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
+<a href="https://tiet.zoom.us/"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
 </div>
 </div>
 </div>
