--- a/electrical.html
+++ b/electrical.html
@@ -281,6 +281,86 @@ Come join us in building the new India!
 <a href="http://www.thapar.edu/academics/departments/electrical-instrumentation-engineering/mou"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-home" style="padding: 10px;"></span>For More Info</a>
     
 </div>
+<div class="container" style="margin-top:100px;">
+  <p style="font:250px; font-weight: bold;text-align: center;color:#640000">SCHEDULE</p>
+  <table class="table">
+    <thead class="thead-dark">
+
+      <tr>
+        <th scope="col" style="color:white">Session</th>
+        <th scope="col" style="color:white">Time</th>
+        <th scope="col" style="color:white">Activity</th>
+        <th scope="col" style="color:white">Team</th>
+        <th scope="col" style="color:white">Link</th>
+
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>1</td>
+        <th scope="row">
+          9:30 AM<br></th>
+        <td>Open Day Meeting<br><br>BE(Electrical Engineering)<br><br></td>
+        <td>Faculty From <br>Electrical Engineering <br > department
+        </td>
+
+        <td><a href="https://tiet.zoom.us/j/9959600890" target="_blank"
+            class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
+              style="padding: 10px;"></span>Connect</a><br><br>
+
+          Meeting ID: 9959600890<br>
+        </td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <th scope="row">
+          9:30 AM<br></th>
+        <td>Open Day Meeting<br><br>BE(Instrumentation and Control)<br><br></td>
+        <td>Faculty From <br>Instrumentation and Control <br > department
+        </td>
+
+        <td><a href="https://tiet.zoom.us/j/5958962146" target="_blank"
+            class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
+              style="padding: 10px;"></span>Connect</a><br><br>
+
+          Meeting ID: 5958962146<br>
+        </td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <th scope="row">
+          9:30 AM<br></th>
+        <td>Open Day Meeting<br><br>BE(Biomedical Engineering)<br><br></td>
+        <td>Faculty From <br>EIED 
+        </td>
+
+        <td><a href="https://tiet.zoom.us/j/6418986872" target="_blank"
+            class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
+              style="padding: 10px;"></span>Connect</a><br><br>
+
+          Meeting ID: 6418986872<br>
+        </td>
+      </tr>
+      <tr>
+        <td>4</td>
+        <th scope="row">
+          9:30 AM<br></th>
+        <td>Open Day Meeting<br><br>BE(Electrical and Computers)<br><br></td>
+        <td>Dean of Faculty Affairs <br> 
+        </td>
+
+        <td><a href="https://tiet.zoom.us/j/92841045026" target="_blank"
+            class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
+              style="padding: 10px;"></span>Connect</a><br><br>
+
+          Meeting ID: 92841045026<br>
+        </td>
+      </tr>
+
+    </tbody>
+  </table>
+</div>
+
 
 
 
