--- a/electrical.html
+++ b/electrical.html
@@ -192,7 +192,7 @@
 <div class="text-center p-4" style=" ">
 <span class="excerpt d-block"style="text-align: center;">Electrical & Instrumentation</span>
 <p style="text-align: center;">ELE & EIC</p>
-<p style="text-align: center;">Date & Time: 21 sept., 9:00 AM</p>
+<p style="text-align: center;">Date & Time: 21 Sept 2020, 9:00 AM</p>
 <br>
 <p>
 <p style="text-align: justify;">The Department of Electrical and Instrumentation Engineering has been playing a vital role in producing scientists and technologists of highest caliber ever since it was established in the year 1956. The department runs two undergraduate programs, three post-graduate programs and Ph.D. program to cater to the ever challenging needs of technical excellence in all areas of electrical engineering. In addition to the strong undergraduate programs, the department has been playing a pioneering role in producing world class postgraduates and researchers. The infrastructure and lab facilities are upgraded from time to time and provide adequate opportunities for students and researchers to learn and innovate. The department has distinguished faculty, all holding degrees from renowned institutes in India and abroad. The department also undertakes many research projects sponsored by both the government and the industry.
