--- a/humanities.html
+++ b/humanities.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="css/bootstrap-datepicker.css">
   <link rel="stylesheet" href="css/jquery.timepicker.css">
   <link rel="stylesheet" href="css/flaticon.css">
-    <link rel="stylesheet" href="css/image.css">
+  <link rel="stylesheet" href="css/image.css">
 
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" type="image/png" href="images/logo/logo.png" />
@@ -47,9 +47,9 @@
     </div>
   </nav>
 
-<!-- <section class="hero-wrap hero-wrap-2" style="background-image: url('images/hostelm.jpg');" data-stellar-background-ratio="0.5"> -->
-<!-- <div class="overlay"></div> -->
-<!-- <div class="container">
+  <!-- <section class="hero-wrap hero-wrap-2" style="background-image: url('images/hostelm.jpg');" data-stellar-background-ratio="0.5"> -->
+  <!-- <div class="overlay"></div> -->
+  <!-- <div class="container">
 <div class="row no-gutters slider-text align-items-end">
 <div class="col-md-9 ftco-animate pb-5">
 <p class="breadcrumbs mb-2"><span class="mr-2"><a href="home.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Engineering Streams <i class="ion-ios-arrow-forward"></i></span></p>
@@ -57,7 +57,7 @@
 </div>
 </div>
 </div> -->
-<!-- </section> -->
+  <!-- </section> -->
 
 
 
@@ -100,22 +100,22 @@
 
  -->
 
-<!-- <section class="ftco-section ftco-no-pt ftco-no-pb">
+  <!-- <section class="ftco-section ftco-no-pt ftco-no-pb">
 <div class="container">
 <div class="row d-flex no-gutters">
 <div class="col-md-5 d-flex"> -->
 
-<section class="ftco-section bg-light">
-<div class="container">
-  <!-- <div class="container"> -->
-    <!-- <div class="row no-gutters slider-text align-items-end"> -->
-    <!-- <div class="col-md-9 ftco-animate pb-5"> -->
-    <!-- <p class="breadcrumbs mb-2"><span class="mr-2"><a href="home.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Engineering Streams <i class="ion-ios-arrow-forward"></i></span></p> -->
-    <h1 class="mb-0 bread">School of
-Humanities & Social Sciences</h1>
-    <!-- </div> -->
-    <!-- </div> -->
-    <!-- </div> -->
+  <section class="ftco-section bg-light">
+    <div class="container">
+      <!-- <div class="container"> -->
+      <!-- <div class="row no-gutters slider-text align-items-end"> -->
+      <!-- <div class="col-md-9 ftco-animate pb-5"> -->
+      <!-- <p class="breadcrumbs mb-2"><span class="mr-2"><a href="home.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Engineering Streams <i class="ion-ios-arrow-forward"></i></span></p> -->
+      <h1 class="mb-0 bread">School of
+        Humanities & Social Sciences</h1>
+      <!-- </div> -->
+      <!-- </div> -->
+      <!-- </div> -->
 
 
 
@@ -128,93 +128,71 @@ Humanities & Social Sciences</h1>
 
 
 
-<div class="row justify-content-center pb-5 mb-3">
-<div class="col-md-7 heading-section text-center ftco-animate">
-<h2 style="padding-left:200px; margin-top: 90px;">Connect With Us</h2>
-</div>
-</div>
-<div class="row">
+      <div class="row justify-content-center pb-5 mb-3">
+        <div class="col-md-7 heading-section text-center ftco-animate">
+          <h2 style="padding-left:200px; margin-top: 90px;">Connect With Us</h2>
+        </div>
+      </div>
+      <div class="row">
 
-<div class="col-md-4 ftco-animate"style="-webkit-box-flex: 0;
+        <div class="col-md-4 ftco-animate" style="-webkit-box-flex: 0;
     -ms-flex: 0 0 70%;
     flex: 0 0 70%;
     max-width: 70%;
    margin-left: 200px;">
-<div class="block-7">
-<div class="img" style="background-image: url(images/ravikiran.jpg);height:450px;"></div>
-<div class="text-center p-4" style="width: ;">
-<span class="excerpt d-block"style="text-align: center;">School of
-Humanities & Social Sciences</span>
-<p style="text-align: center;">Humanities</p>
-<p style="text-align: center;">Date & Time: 21 sept., 9:00 AM</p>
-<br>
-<p style="text-align: justify;">The School of Humanities and Social Sciences includes a wide range of disciplines Economics, Psychology, Management, Commerce and English. The school offers doctoral programs in these disciplines. The school runs Masters Program in Psychology. The faculty of school is offering courses in Humanities and Social Sciences to undergraduate and post graduate students of the Institute. These courses are aimed at developing students to become effective business managers in their careers besides inculcating in them an understanding of values, culture and heritage. The School has MOU with the University of Groningen, The Netherlands for Clinical Psychology Program.
-</p><!-- <p>
+          <div class="block-7">
+            <div class="img" style="background-image: url(images/ravikiran.jpg);height:450px;"></div>
+            <div class="text-center p-4" style="width: ;">
+              <span class="excerpt d-block" style="text-align: center;">School of
+                Humanities & Social Sciences</span>
+              <p style="text-align: center;">Humanities</p>
+              <p style="text-align: center;">Date & Time: 21 Sept 2020, 9:00 AM</p>
+              <br>
+              <p style="text-align: justify;">The School of Humanities and Social Sciences includes a wide range of
+                disciplines Economics, Psychology, Management, Commerce and English. The school offers doctoral programs
+                in these disciplines. The school runs Masters Program in Psychology. The faculty of school is offering
+                courses in Humanities and Social Sciences to undergraduate and post graduate students of the Institute.
+                These courses are aimed at developing students to become effective business managers in their careers
+                besides inculcating in them an understanding of values, culture and heritage. The School has MOU with
+                the University of Groningen, The Netherlands for Clinical Psychology Program.
+              </p>
+              <!-- <p>
 Come join us in building the new India!
   
 </p>
  -->
 
 
-<a href="https://zoom.us/j/92636688969?pwd=Sk9CS1ZWZWgvaWpnTzRZakZER0IyQT09"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
-</div>
-</div>
-</div>
+              <a href="https://zoom.us/j/92636688969?pwd=Sk9CS1ZWZWgvaWpnTzRZakZER0IyQT09" target="_blank"
+                class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
+                  style="padding: 10px;"></span>Connect</a>
+            </div>
+          </div>
+        </div>
 
 
-
-    <div id="light" style="margin-left: 290px;">
+        <div id="light" style="margin-left: 290px;">
           <a class="boxclose" id="boxclose" onclick="lightbox_close();"></a>
           <!-- <video id="VisaChipCardVideo" width="600" controls>
               <source src="https://youtu.be/vvCOSclixJE" type="video/mp4"> -->
-         <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/H4ljv2EjPxw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        -->   <!--Browser does not support <video> tag -->
+          <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/H4ljv2EjPxw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        -->
+          <!--Browser does not support <video> tag -->
           </video>
         </div>
-<!-- <div class="row justify-content-center pb-5 mb-3">
-<div class="col-md-7 heading-section text-center ftco-animate">
-<h2 style="padding-left:200px;">Connect With Us</h2>
-</div>
-</div>
-<div class="row">
-<div class="col-md-4 ftco-animate">
-<div class="block-7">
-<div class="img" style="background-image: url(images/dipto.jpeg);"></div>
-<div class="text-center p-4">
-<span class="excerpt d-block"style="text-align: center;">Mr Dipto Barman</span>
+      
+      </div>
+    </div>
+    </div>
+    </div>
+    </div>
+  </section>
 
-<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
-</div>
-</div>
-</div>
-<div class="col-md-4 ftco-animate">
-<div class="block-7">
-<div class="img" style="background-image: url(images/dipto.jpeg);"></div>
-<div class="text-center p-4">
-<span class="excerpt d-block" style="text-align: center;">Mr Dipto Barman</span>
+  <div style="padding-bottom:100px; margin-left:500px; margin-right:500px;">
+    <a href="http://smss.thapar.edu/" target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-home"
+        style="padding: 10px;"></span>For More Info</a>
 
-<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
-</div>
-</div>
-</div>
-<div class="col-md-4 ftco-animate">
-<div class="block-7">
-<div class="img" style="background-image: url(images/dipto.jpeg);"></div>
-<div class="text-center p-4">
-<span class="excerpt d-block"style="text-align: center;">Mr Dipto Barman</span>
-
-<a href="https://tiet.zoom.us/my/diptobarman" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Zoom Link</a>
- --></div>
-</div>
-</div>
-</div>
-</div>
-</section>
-
-<div style="padding-bottom:100px; margin-left:500px; margin-right:500px;">
-<a href="http://smss.thapar.edu/"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-home" style="padding: 10px;"></span>For More Info</a>
-    
-</div>
+  </div>
 
 
 
@@ -227,15 +205,18 @@ Come join us in building the new India!
             institutions, which provides a steady source of highly skilled talent to the nation as well as overseas.</p>
           <ul class="ftco-footer-social p-0">
             <li class="ftco-animate"><a
-                href="https://twitter.com/TIETofficial?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"  target="_blank"
-                data-toggle="tooltip" data-placement="top" title="Twitter"><span class="fa fa-twitter"></span></a></li>
-            <li class="ftco-animate"><a href="https://www.facebook.com/officialTIET/"  target="_blank" data-toggle="tooltip"
-                data-placement="top" title="Facebook"><span class="fa fa-facebook"></span></a></li>
-            <li class="ftco-animate"><a href="https://www.instagram.com/tietofficial/?hl=en"  target="_blank" data-toggle="tooltip"
-                data-placement="top" title="Instagram"><span class="fa fa-instagram"></span></a></li>
+                href="https://twitter.com/TIETofficial?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
+                target="_blank" data-toggle="tooltip" data-placement="top" title="Twitter"><span
+                  class="fa fa-twitter"></span></a></li>
+            <li class="ftco-animate"><a href="https://www.facebook.com/officialTIET/" target="_blank"
+                data-toggle="tooltip" data-placement="top" title="Facebook"><span class="fa fa-facebook"></span></a>
+            </li>
+            <li class="ftco-animate"><a href="https://www.instagram.com/tietofficial/?hl=en" target="_blank"
+                data-toggle="tooltip" data-placement="top" title="Instagram"><span class="fa fa-instagram"></span></a>
+            </li>
             <!-- thapar link -->
-            <li class="ftco-animate"><a href="http://www.thapar.edu/"  target="_blank" data-toggle="tooltip" data-placement="top"
-                title="Thapar Homepage"><span class="fa fa-home"></span></a></li>
+            <li class="ftco-animate"><a href="http://www.thapar.edu/" target="_blank" data-toggle="tooltip"
+                data-placement="top" title="Thapar Homepage"><span class="fa fa-home"></span></a></li>
           </ul>
         </div>
 
@@ -254,10 +235,11 @@ Come join us in building the new India!
             <li><a href="alumni.html" class="py-2 d-block">Sessions With Our Alumni</a></li>
             <li><a href="placement.html" class="py-2 d-block">IEP Cell</a></li>
             <li><a href="gallery.html" class="py-2 d-block">Gallery</a></li>
-            <li><a href="http://www.thapar.edu/"  target="_blank" class="py-2 d-block">Thapar Official Website</a></li>
-<!--             <li><a href="#" class="py-2 d-block">FAQ's</a></li>
+            <li><a href="http://www.thapar.edu/" target="_blank" class="py-2 d-block">Thapar Official Website</a></li>
+            <!--             <li><a href="#" class="py-2 d-block">FAQ's</a></li>
             <li><a href="#" class="py-2 d-block">HelpContact</a></li>
- -->          </ul>
+ -->
+          </ul>
 
 
         </div>
