--- a/biotech.html
+++ b/biotech.html
@@ -47,112 +47,6 @@
     </div>
   </nav>
 
-<!-- <section class="hero-wrap hero-wrap-2" style="background-image: url('images/hostelm.jpg');" data-stellar-background-ratio="0.5"> -->
-<!-- <div class="overlay"></div> -->
-<!-- <div class="container">
-<div class="row no-gutters slider-text align-items-end">
-<div class="col-md-9 ftco-animate pb-5">
-<p class="breadcrumbs mb-2"><span class="mr-2"><a href="home.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Engineering Streams <i class="ion-ios-arrow-forward"></i></span></p>
-<h1 class="mb-0 bread">CSED</h1>
-</div>
-</div>
-</div> -->
-<!-- </section> -->
-
-
-
-
-
-
-
-  <!-- team-area -->
-  <!--       <section id="team" class="team-area team-area-content p-relative pt-120 pb-120 fix">
-            <div class="circal1 item-zoom-inout"></div>
-            <div class="circal2 item-zoom-inout"></div>
-            <div class="circal3 item-zoom-inout"></div>
-            <div class="circal4 item-zoom-inout"></div>
-            <div class="container">
-
-                <div class="row"  style="padding-top: 50px;">
-                    <div class="col-lg-5">
-                        <div class="wow fadeInLeft" data-animation="fadeInLeft" data-delay=".2s">
-                            <img src="images/cse.jpg" alt="CSED">
-                        </div>
-                    </div>
-                    <div class="col-lg-7"  style="padding-left: 50px;">
-                        <div class="s-about-content pl-30 wow fadeInRight" data-animation="fadeInRight" data-delay=".2s">
-                            <h2>Dr. Maninder Singh</h2>
-                            <span><i>Head of Department, Department of Computer Science & Engineering</i></span>
-                            <p>Welcome to the Department of Computer Science and Engineering. I am delighted that you are showcasing your interest to know more about us, virtue being this web presence. This web-site holds information for all the stakeholders. We at Computer Science and Engineering department offer one of the best Computer Engineering undergraduate program aimed at the super-creative generation.</p>
-                            <p>We have carefully crafted our undergraduate program to offer elective focus in six major areas of Computing: High Performance Computing, Machine Learning & Data Analytics, Computer Animation and Gaming, Cyber and Information Security, Software Engineering and last but not least Mathematics and Computing. Apart from these, design projects through-out the program highlight life-long outcome based, research led teaching pedagogy. With these choices, we hope to fulfil the requirement of industry as well quench the thirst of budding professionals.</p>
-                            <p>For More Details <p><a href="http://csed.thapar.edu/" class="btn btn-primary mr-md-4 py-3 px-4">Learn more <span class="ion-ios-arrow-forward"></span></a></p></p>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </section>
-      
-
-
-
-
-
- -->
-
-<!-- <section class="ftco-section ftco-no-pt ftco-no-pb">
-<div class="container">
-<div class="row d-flex no-gutters">
-<div class="col-md-5 d-flex"> -->
-<!-- <div class="img img-video d-flex align-self-stretch align-items-center justify-content-center justify-content-md-center mb-4 mb-sm-0" style="background-image:url(images/about-1.jpg);">
-</div>
-</div>
-<div class="col-md-7 pl-md-5 py-md-5">
-<div class="heading-section pt-md-5">
-<h2 class="mb-4">Why Choose Us?</h2> -->
-<!-- </div> -->
- <!-- 
-<div class="row" style="padding-top: 50px;">
-<div class="col-md-6 services-2 w-100 d-flex">
-<div class="icon d-flex align-items-center justify-content-center">
-  <span class="fal fa-users"></span>
- -->
-<!-- </div> -->
-<!-- <div class="text pl-3">
-<h4>Great Faculty</h4>
-<p>Improve your career prospects with our master's programme and study at our newly.</p>
-</div>
-</div>
-<div class="col-md-6 services-2 w-100 d-flex">
-<div class="icon d-flex align-items-center justify-content-center">
-  <span class="fal fa-building"></span>
-
-</div>
-<div class="text pl-3">
-<h4>New Infrastructure</h4>
-<p>Improve your career prospects with our master's programme and study at our newly.</p>
-</div>
-</div>
-<div class="col-md-6 services-2 w-100 d-flex">
-<div class="icon d-flex align-items-center justify-content-center"><span class="icon color3"></span></div>
-<div class="text pl-3">
-<h4>More Learning</h4>
-<p>Improve your career prospects with our master's programme and study at our newly.</p>
-</div>
-</div>
-<div class="col-md-6 services-2 w-100 d-flex">
-<div class="icon d-flex align-items-center justify-content-center"><span class="fal fa-magic"></span></div>
-<div class="text pl-3">
-<h4>Enhanced Syllabi</h4>
-<p>Improve your career prospects with our master's programme and study at our newly.</p>
-</div>
-</div>
-</div>
- -->
-<!-- </div>
-</div>
-</div>
-</section> -->
 <section class="ftco-section bg-light">
 <div class="container">
   <!-- <div class="container"> -->
@@ -176,9 +70,9 @@
     max-width: 70%;
    margin-left: 200px;">
 <div class="block-7">
-<div class="img" style="background-image: url(images/faculty/biotech.jpeg);height:450px;"></div>
+<div class="img" style="background-image: url(images/faculty/Biotech.jpeg);height:450px;"></div>
 <div class="text-center p-4">
-<span class="excerpt d-block"style="text-align: center;">Bio-Technology Engineering</span>
+<span class="excerpt d-block"style="text-align: center;">Biotechnology</span>
 <p style="text-align: center;">BTD</p>
 
 <p style="text-align: center;">Date & Time: 21 Sept 2020, 9:00 AM</p>
