--- a/chemical.html
+++ b/chemical.html
@@ -77,7 +77,7 @@
     max-width: 70%;
    margin-left: 200px;">
           <div class="block-7">
-            <div class="img" style="background-image: url(images/faculty/chemical.jpeg);height:450px;"></div>
+            <div class="img" style="background-image: url(images/faculty/Chemical.jpeg);height:450px;"></div>
             <div class="text-center p-4">
               <span class="excerpt d-block" style="text-align: center;">Chemical Engineering</span>
               <p style="text-align: center;">CHED</p>
