--- a/civil.html
+++ b/civil.html
@@ -61,44 +61,6 @@
 
 
 
-
-
-
-
-  <!-- team-area -->
-  <!--       <section id="team" class="team-area team-area-content p-relative pt-120 pb-120 fix">
-            <div class="circal1 item-zoom-inout"></div>
-            <div class="circal2 item-zoom-inout"></div>
-            <div class="circal3 item-zoom-inout"></div>
-            <div class="circal4 item-zoom-inout"></div>
-            <div class="container">
-
-                <div class="row"  style="padding-top: 50px;">
-                    <div class="col-lg-5">
-                        <div class="wow fadeInLeft" data-animation="fadeInLeft" data-delay=".2s">
-                            <img src="images/cse.jpg" alt="CSED">
-                        </div>
-                    </div>
-                    <div class="col-lg-7"  style="padding-left: 50px;">
-                        <div class="s-about-content pl-30 wow fadeInRight" data-animation="fadeInRight" data-delay=".2s">
-                            <h2>Dr. Maninder Singh</h2>
-                            <span><i>Head of Department, Department of Computer Science & Engineering</i></span>
-                            <p>Welcome to the Department of Computer Science and Engineering. I am delighted that you are showcasing your interest to know more about us, virtue being this web presence. This web-site holds information for all the stakeholders. We at Computer Science and Engineering department offer one of the best Computer Engineering undergraduate program aimed at the super-creative generation.</p>
-                            <p>We have carefully crafted our undergraduate program to offer elective focus in six major areas of Computing: High Performance Computing, Machine Learning & Data Analytics, Computer Animation and Gaming, Cyber and Information Security, Software Engineering and last but not least Mathematics and Computing. Apart from these, design projects through-out the program highlight life-long outcome based, research led teaching pedagogy. With these choices, we hope to fulfil the requirement of industry as well quench the thirst of budding professionals.</p>
-                            <p>For More Details <p><a href="http://csed.thapar.edu/" class="btn btn-primary mr-md-4 py-3 px-4">Learn more <span class="ion-ios-arrow-forward"></span></a></p></p>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </section>
-      
-
-
-
-
-
- -->
 <section class="ftco-section bg-light">
 <div class="container">
   <!-- <div class="container"> -->
@@ -122,7 +84,7 @@
     max-width: 70%;
    margin-left: 200px;">
 <div class="block-7">
-<div class="img" style="background-image: url(images/faculty/civil.jpeg);height:450px;"></div>
+<div class="img" style="background-image: url(images/faculty/Civil.jpeg);height:450px;"></div>
 <div class="text-center p-4">
 <span class="excerpt d-block"style="text-align: center;">Civil Engineering</span>
 <p style="text-align: center;">CED</p>
