--- a/eced.html
+++ b/eced.html
@@ -81,7 +81,7 @@
 
 </p>
 
-<a href="https://tiet.zoom.us/my/eced18"   target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
+<a href="https://tiet.zoom.us/my/eced18"   target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect With Us</a>
 
 </div>
 </div>
