--- a/electrical.html
+++ b/electrical.html
@@ -203,8 +203,8 @@ Come join us in building the new India!
 
 
 
-<a href="https://zoom.us/j/92636688969?pwd=Sk9CS1ZWZWgvaWpnTzRZakZER0IyQT09"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
-</div>
+<!-- <a href="https://zoom.us/j/92636688969?pwd=Sk9CS1ZWZWgvaWpnTzRZakZER0IyQT09"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
+ --></div>
 </div>
 </div>
 
@@ -306,7 +306,7 @@ Come join us in building the new India!
 
         <td><a href="https://tiet.zoom.us/j/9959600890" target="_blank"
             class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
-              style="padding: 10px;"></span>Connect</a><br><br>
+              style="padding: 10px;"></span>Connect With Us</a><br><br>
 
           Meeting ID: 9959600890<br>
         </td>
@@ -321,7 +321,7 @@ Come join us in building the new India!
 
         <td><a href="https://tiet.zoom.us/j/5958962146" target="_blank"
             class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
-              style="padding: 10px;"></span>Connect</a><br><br>
+              style="padding: 10px;"></span>Connect With Us</a><br><br>
 
           Meeting ID: 5958962146<br>
         </td>
@@ -336,7 +336,7 @@ Come join us in building the new India!
 
         <td><a href="https://tiet.zoom.us/j/6418986872" target="_blank"
             class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
-              style="padding: 10px;"></span>Connect</a><br><br>
+              style="padding: 10px;"></span>Connect With Us</a><br><br>
 
           Meeting ID: 6418986872<br>
         </td>
@@ -351,7 +351,7 @@ Come join us in building the new India!
 
         <td><a href="https://tiet.zoom.us/j/92841045026" target="_blank"
             class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
-              style="padding: 10px;"></span>Connect</a><br><br>
+              style="padding: 10px;"></span>Connect With Us</a><br><br>
 
           Meeting ID: 92841045026<br>
         </td>
