--- a/humanities.html
+++ b/humanities.html
@@ -142,7 +142,7 @@
    margin-left: 200px;">
           <div class="block-7">
             <div class="img" style="background-image: url(images/ravikiran.jpg);height:450px;"></div>
-            <div class="text-center p-4" style="width: ;">
+            <div class="text-center p-4" style="">
               <span class="excerpt d-block" style="text-align: center;">School of
                 Humanities & Social Sciences</span>
               <p style="text-align: center;">Humanities</p>
@@ -165,7 +165,7 @@ Come join us in building the new India!
 
               <a href="https://zoom.us/j/92636688969?pwd=Sk9CS1ZWZWgvaWpnTzRZakZER0IyQT09" target="_blank"
                 class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
-                  style="padding: 10px;"></span>Connect</a>
+                  style="padding: 10px;"></span>Connect With Us</a>
             </div>
           </div>
         </div>
