--- a/lmtsm.html
+++ b/lmtsm.html
@@ -83,7 +83,7 @@
    margin-left: 200px;">
           <div class="block-7">
             <div class="img" style="background-image: url(images/dirMBA.jpg);height:450px;"></div>
-            <div class="text-center p-4" style="width: ;">
+            <div class="text-center p-4" style="">
               <span class="excerpt d-block" style="text-align: center;">LM Thapar School of Management
               </span>
               <p style="text-align: center;">LMTSM</p>
@@ -112,7 +112,7 @@
 
 
               <a href="https://zoom.us/j/97726398272" target="_blank" class="btn btn-primary d-block px-2 py-3"><span
-                  class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
+                  class="fa fa-video-camera" style="padding: 10px;"></span>Connect With Us</a>
             </div>
           </div>
         </div>
