--- a/med.html
+++ b/med.html
@@ -230,7 +230,7 @@ Dr Sandeep Sharma<br>
 Dr.R.K.Duvedi<br>
 </td>
 
-<td><a href="https://tiet.zoom.us/j/92454596107?pwd=SXhJT2ZPTWU4bGgwN2F1eE1ldHBaZz09"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a><br><br>
+<td><a href="https://tiet.zoom.us/j/92454596107?pwd=SXhJT2ZPTWU4bGgwN2F1eE1ldHBaZz09"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect With Us</a><br><br>
 
       
 Meeting ID: 924 5459 6107<br>
@@ -252,7 +252,7 @@ Dr Vivek Jain<br>
 Dr Sandeep Sharma<br>
 Dr.R.K.Duvedi<br>
 </td>
-<td><a href="https://tiet.zoom.us/j/93412938513?pwd=UC83bmRGZldGYjA5RHJIOG9rU3RWUT09"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a><br><br>
+<td><a href="https://tiet.zoom.us/j/93412938513?pwd=UC83bmRGZldGYjA5RHJIOG9rU3RWUT09"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect With Us</a><br><br>
 
 
 Meeting ID: 934 1293 8513<br>
@@ -271,7 +271,7 @@ Dr Vivek Jain<br>
 Dr Dheeraj Gupta<br>
 
 </td>
-<td><a href="https://tiet.zoom.us/j/97993984860?pwd=UlJpTXMwQ21kczBsdTdISTBCR3Uxdz09"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a><br><br>
+<td><a href="https://tiet.zoom.us/j/97993984860?pwd=UlJpTXMwQ21kczBsdTdISTBCR3Uxdz09"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect With Us</a><br><br>
 
       
 
