--- a/chemical.html
+++ b/chemical.html
@@ -140,7 +140,7 @@
 
           <td><a href="ttps://tiet.zoom.us/j/3327136261? pwd=OUh5RWdRWEtXQzgyek8 vcE5YT1lrUT09" target="_blank"
               class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
-                style="padding: 10px;"></span>Connect</a><br><br>
+                style="padding: 10px;"></span>Connect With Us</a><br><br>
 
             Meeting ID: 332 713 6261<br>
             Passcode: 123
@@ -164,7 +164,7 @@
 
           <td><a href="https://tiet.zoom.us/j/3327136261? pwd=OUh5RWdRWEtXQzgyek8 vcE5YT1lrUT09" target="_blank"
               class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
-                style="padding: 10px;"></span>Connect</a><br><br>
+                style="padding: 10px;"></span>Connect With Us</a><br><br>
 
             Meeting ID: 332 713 6261<br>
             Passcode: 123
@@ -188,7 +188,7 @@
 
           <td><a href="https://tiet.zoom.us/j/3327136261? pwd=OUh5RWdRWEtXQzgyek8 vcE5YT1lrUT09" target="_blank"
               class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
-                style="padding: 10px;"></span>Connect</a><br><br>
+                style="padding: 10px;"></span>Connect With Us</a><br><br>
 
             Meeting ID: 332 713 6261<br>
             Passcode: 123
