--- a/doaa.html
+++ b/doaa.html
@@ -188,7 +188,7 @@
 </p> -->
 
 
-<a href="https://tiet.zoom.us/my/msingh/"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect</a>
+<a href="https://tiet.zoom.us/my/msingh/"  target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera" style="padding: 10px;"></span>Connect With Us</a>
 </div>
 </div>
 </div>
