--- a/tslas.html
+++ b/tslas.html
@@ -189,7 +189,7 @@
    margin-left: 200px;">
           <div class="block-7">
             <div class="img" style="background-image: url(images/drnair.jpg);height:450px;"></div>
-            <div class="text-center p-4" style="width: ;">
+            <div class="text-center p-4" style="">
               <span class="excerpt d-block" style="text-align: center;">Thapar School of Liberal Arts & Sciences</span>
               <p style="text-align: center;">TSLAS</p>
               <p style="text-align: center;">Date & Time: 21 Sept 2020., 9:00 AM</p>
@@ -226,7 +226,7 @@
 
               <a href="https://zoom.us/j/92636688969?pwd=Sk9CS1ZWZWgvaWpnTzRZakZER0IyQT09" target="_blank"
                 class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
-                  style="padding: 10px;"></span>Connect</a>
+                  style="padding: 10px;"></span>Connect With Us</a>
             </div>
           </div>
         </div>
