--- a/gallery.html
+++ b/gallery.html
@@ -167,8 +167,8 @@
 </a>
 <div class="desc w-100 px-4">
 <div class="text w-100 mb-3">
-<span>CSED</span>
-<h2><a href="work-single.html">Library</a></h2>
+<span>Hostel</span>
+<h2><a href="work-single.html">Hostel M</a></h2>
 </div>
 </div>
 </div>
