--- a/doaa.html
+++ b/doaa.html
@@ -72,7 +72,7 @@
 <div class="img" style=" margin-top: 20px; margin-left: auto;
 margin-right: auto; background-image: url(images/faculty/doaa.jpg);height:520px; width:520px;border-radius: 50%;"></div>
 <div class="text-center p-4">
-<span class="excerpt d-block"style="text-align: center;">Dean of Academic Affairs</span>
+<span class="excerpt d-block"style="text-align: center;">Dr. S.S. Bhatia</span>
 <p style="text-align: center;">	Dean of Academic Affairs</p>
 <p style="text-align: center;">Date & Time: 21 Sept 2020, 9:00 AM</p>
 <br>
