--- a/dosa.html
+++ b/dosa.html
@@ -72,7 +72,7 @@
             <div class="img" style=" margin-top: 20px; margin-left: auto;
 margin-right: auto; background-image: url(images/dosamaam.jpeg);height:550px; width:550px; border-radius: 50%;"></div>
             <div class="text-center p-4">
-              <span class="excerpt d-block" style="text-align: center;"> Dean of Student Affairs</span>
+              <span class="excerpt d-block" style="text-align: center;"> Dr. Inderveer Channa</span>
               <p style="text-align: center;"> Dean of Student Affairs</p>
               <p style="text-align: center;">Date & Time: 21 Sept 2020, 10:00 AM</p>
               <br>
