--- a/home.html
+++ b/home.html
@@ -331,7 +331,7 @@
               <h3 class="heading" style="text-align: center;">Student Life</h3>
               <p style="font-weight: bold;text-align: center;">STUDENT LIFE @TIET</p>
               <p></p>
-              <p><a href="dosa.html" onclick="lightbox_open();" class="btn btn-primary mr-md-4 py-3 px-4"
+              <p><a href="dosa.html"  class="btn btn-primary mr-md-4 py-3 px-4"
                   style="margin-top: 90px; margin-left: 55px;">Have a look<span class="ion-ios-arrow-forward"></span></a></p>
               <a href="dosa.html" class="btn-custom d-flex align-items-center justify-content-center"><span
                   class="fa fa-chevron-right"></span><i class="sr-only">Read more</i></a>
