--- a/tslas.html
+++ b/tslas.html
@@ -194,7 +194,7 @@
               <p style="text-align: center;">TSLAS</p>
               <p style="text-align: center;">Date & Time: 21 Sept 2020., 9:00 AM</p>
               <br>
-              <p>The School of Liberal Arts & Sciences, is the School of New India. Keeping alive the legacy of its
+              <p style="text-align: justify;">The School of Liberal Arts & Sciences, is the School of New India. Keeping alive the legacy of its
                 name, Thapar Institute of Engineering & Technology pioneers yet again to introduce the progressive
                 program of Liberal Arts & Sciences in Punjab. The forward-thinking philosophy and pedagogy of this
                 latest addition of teaching-learning opportunities created by TIET, presents students with prospects to
