--- a/alumni.html
+++ b/alumni.html
@@ -249,7 +249,7 @@ Chief Technology Officer, Tata Communications Lanka Ltd
 <span class="position mb-2">1994, Electronics and Electrical Communication </span>
 <div class="faded">
 <p>Director , Product and Technology Programs 
-Workday
+Workday <br >worked at 
 Salesforce , Cisco, Sun Microsystems, Silicon Graphics , CMC Ltd</p>
 <br>
 <p style="font-weight: bold;">DATE: 21 Sept,2020   </p>
@@ -296,14 +296,14 @@ Salesforce , Cisco, Sun Microsystems, Silicon Graphics , CMC Ltd</p>
 <div class="col-md-6 col-lg-3 ftco-animate">
 <div class="staff">
 <div class="img-wrap d-flex align-items-stretch">
-<div class="img align-self-stretch" style="background-image: url(images/alumni/rakesh.jpg);"></div>
+<div class="img align-self-stretch" style="background-image: url(images/alumni/rakeshsir.jpeg);"></div>
 </div>
 <div class="text pt-3 px-3 pb-4 text-center">
 <h3>Rakesh Anand</h3>
 <span class="position mb-2">1980, Mechanical Engineer</span>
 
 <div class="faded">
-<p>Had worked at CMD (Mazagon Dock Shipbuilders Limited)</p>
+<p>Former Chairman and Managing Director (Mazagon Dock Shipbuilders Limited)</p>
 <br><br><br><br><br><br><br><br>
 
 <p style="font-weight: bold;">DATE: 21 Sept,2020   </p>
@@ -496,9 +496,9 @@ Deutsche Bank</p>
 </div>
 <div class="text pt-3 px-3 pb-4 text-center">
 <h3>Ish Ahuja</h3>
-<span class="position mb-2">1994, Mechanical Engineer</span>
+<span class="position mb-2">2007, Civil Engineer</span>
 <div class="faded">
-<p>Project Controls Manager - NSW/ACT - National Infrastructure Team (John Holland)</p>
+<p>Project Controls Manager - NSW/ACT - National Infrastructure Team (John Holland)</p><br><br>
 <p>Had worked in Cushman & Wakefield, Laing O’Rourke, Acciona</p>
 <br><br><br>
 <p style="font-weight: bold;">DATE: 21 Sept,2020   </p>
