--- a/dosa.html
+++ b/dosa.html
@@ -106,6 +106,86 @@ margin-right: auto; background-image: url(images/dosamaam.jpeg);height:550px; wi
     </div>
   </section>
 
+  <div class="container" style="margin-top:100px;">
+    <p style="font:250px; font-weight: bold;text-align: center;color:#640000">SCHEDULE</p>
+    <table class="table">
+      <thead class="thead-dark">
+
+        <tr>
+          <th scope="col" style="color:white">Session</th>
+          <th scope="col" style="color:white">Time</th>
+          <th scope="col" style="color:white">Activity</th>
+          <th scope="col" style="color:white">Team</th>
+
+          <th scope="col" style="color:white">Link</th>
+
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <th scope="row">
+            10:00 AM to 11:50 PM</th>
+          <td>Q&A</td>
+          <td>Dr. Inderveer Chana (Dean, Student Affairs)<br>
+            Dr. Mahesh Sharma(Asso. Dean, Student Affairs )<br>
+            Dr. Ashish Purohit (Co. warden)<br>
+            Dr. Gagandeep Kaur (Warden Hostel N) <br>
+            Dr. S C Bose (Warden Hostel C)<br>
+          </td>
+
+          <td><a href="https://tiet.zoom.us/j/98009489667?pwd=WnJnMDY5YnpIVDFoeVdYVklzV0xjdz09" target="_blank"
+              class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
+                style="padding: 10px;"></span>Connect With Us</a><br><br>
+
+            Meeting ID:  980 0948 9667<br>
+            Passcode: 006042
+          </td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <th scope="row">
+            12:00 PM to 01:50 PM</th>
+            <td>Q&A</td>
+            <td>Dr. Inderveer Chana (Dean, Student Affairs)<br>
+              Dr. Mahesh Sharma(Asso. Dean, Student Affairs )<br>
+              Dr. Ashish Purohit (Co. warden)<br>
+              Dr. Anju Bala (Warden Hostel I) <br>
+              Dr. Neeraj Grover (Warden Hostel M)<br>
+            </td>
+
+          <td><a href="https://tiet.zoom.us/j/98009489667?pwd=WnJnMDY5YnpIVDFoeVdYVklzV0xjdz09" target="_blank"
+            class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
+              style="padding: 10px;"></span>Connect With Us</a><br><br>
+
+          Meeting ID:  980 0948 9667<br>
+          Passcode: 006042
+        </td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <th scope="row">
+            03:00 PM to 04:50 PM</th>
+            <td>Q&A</td>
+            <td>Dr. Inderveer Chana (Dean, Student Affairs)<br>
+              Dr. Mahesh Sharma(Asso. Dean, Student Affairs )<br>
+              Dr. Ashish Purohit (Co. warden)<br>
+              Dr. Amrita Sinha (Warden Hostel G) <br>
+              Dr.Madhup Mittal (Warden Hostel M)<br>
+            </td>
+
+          <td><a href="https://tiet.zoom.us/j/98009489667?pwd=WnJnMDY5YnpIVDFoeVdYVklzV0xjdz09" target="_blank"
+            class="btn btn-primary d-block px-2 py-3"><span class="fa fa-video-camera"
+              style="padding: 10px;"></span>Connect With Us</a><br><br>
+
+          Meeting ID:  980 0948 9667<br>
+          Passcode: 006042
+        </td>
+
+      </tbody>
+    </table>
+  </div>
+
   <div style="padding-bottom:100px; margin-left:500px; margin-right:500px;">
     <a href="http://www.thapar.edu/" target="_blank" class="btn btn-primary d-block px-2 py-3"><span class="fa fa-home"
         style="padding: 10px;"></span>For More Info</a>
