--- a/doaa.html
+++ b/doaa.html
@@ -115,7 +115,7 @@ margin-right: auto; background-image: url(images/faculty/doaa.jpg);height:520px;
           Dr. Mahesh Sharma(Asso. Dean, Student Affairs )<br>
           Dr. Ashish Purohit (Co. warden)<br>
           Dr. Gagandeep Kaur (Warden Hostel N) <br>
-          Dr. S C Bose (Warden Hostel C -->)<br>
+          Dr. S C Bose (Warden Hostel C) --><br>
         </td>
 
         <td><a href="https://tiet.zoom.us/j/98009489667?pwd=WnJnMDY5YnpIVDFoeVdYVklzV0xjdz09" target="_blank"
